# exerpyse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
exerpyse/: console.py  file_manager.py  main.py  runner.py  utils.py
exerpyse/include/: ex01.py  ex02.py
exerpyse/include/exercises/: ex01.py  ex02.py
exerpyse/include/solutions/: ex01.py  ex02.py
exerpyse/include/tests/: ex01.py
exerpyse/tests/: __init__.py  ex01.py  ex02.py
tests/: test_me.py  test_utils.py
