[tool.poetry]
name = "exerpyse"
version = "0.1.0"
description = "Learn Python by exercise."
authors = ["Sivam Pasupathipillai <sivam.pasupathipillai@gmail.com>"]
readme = "README.md"
packages = [{include = "exerpyse"}]
include = ["exerpyse/include/**/*"]


[tool.poetry.scripts]
exerpyse = "exerpyse.main:run"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.3"
black = "^23.12.0"
isort = "^5.13.2"
mypy = "^1.7.1"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = [
    'docs/conf.py',
    'exerpyses/'
]

[tool.pytest.ini_options]
addopts = "--cov=svmpsp_pyvis --cov-fail-under=0  --cov-report term-missing --maxfail=1 --verbosity=2"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 80
disable = """
    invalid-name,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    too-few-public-methods,
    too-many-arguments,
    too-many-public-methods,
"""